# poc-manage-token

./: .gitignore  LICENSE  MANIFEST.in  README.md  SECURITY.md  app_diagrams.puml  demo.py  diagrama_flujo_login.puml  main.py  pyproject.toml  setup.py
UML/login/: diagrama_flujo_login.puml
app/: __init__.py  config.py  extensions.py  main.py  requirements.txt  run.py
app/auth/exceptions/: auth_exceptions.py
app/auth/services/: audit_service.py  auth_service.py  blacklist_service.py  session_service.py  user_service.py
app/backend/: routes.py  routes_admin.py
app/dao/: audit_dao.py  auth_dao.py  blacklist_dao.py  session_dao.py  user_dao.py
app/frontend/: routes.py
app/midleware/: jwt_guard.py  security.py
app/model/: app_manager.py  audit_session.py  token_generator.py  token_session.py  user.py  user_session.py
app/static/css/: app.css  chat.css  main.css  style.css
app/static/js/: auth.js  chat.js  layout.js
app/static/js/adapters/: CookieAdapter.js  LocalStorageAdapter.js  StorageAdapter.js
app/static/js/api/: ApiAdmin.js  ApiClient.js  ApiUser.js
app/static/js/main/: admin.js  auditoria.js  middleware.js  sesiones.js  (+1 more)
app/templates/: admin_panel.html  administrar.html  audit.html  base.html  chat.html  dashboard.html  dashboard_user.html  index.html  layout - Copy.html  layout.html  layout_public.html  login.html  sessiones_activas.html
app/tests/: test_audit_log_dao.py  test_auth_dao.py  test_session_dao.py
app/utils/: db.py  db_create.py  db_manager.py  db_mongo.py
app/web_socket/: event_socket.py  eventos.py  stream_handler.py
(+11 files in other folders)
