[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app_manage_token"
version = "1.0.0"
description = "Aplicación Flask con Bootstrap, SocketIO y PyMongo. Para autenticación y manejo de sesiones activas"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "dev-ojeda", email = "neo1sr3@email.com" }
]

dependencies = [
    "flask>=3.0.3",
    "flask-socketio>=5.3.6",
    "eventlet>=0.36.1",
    "flask-bootstrap>=3.3.7.1",
    "flask-cors>=4.0.1",
    "pymongo>=4.6.1",
    "dnspython>=2.6.1",
    "python-dotenv>=1.0.1",
    "itsdangerous>=2.2.0",
    "werkzeug>=3.0.4",
    "markupsafe>=2.1.5",
    "jinja2>=3.1.4",
    "six>=1.16.0",
    "icecream>=2.1.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/dev-ojeda/poc-manage-token"